--- a/clisp/.vscode/settings.json
+++ b/clisp/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "editline.h": "c",
+        "readline.h": "c"
     }
 }
