--- a/clisp/meson.build
+++ b/clisp/meson.build
@@ -2,10 +2,13 @@ project('clisp', 'c', version: '0.1', default_options : [
     'c_std=c11'])
 
 # external dependencies
-deps = [dependency('libedit', required: true)]
+deps = [
+    dependency('libedit', required: true)
+]
 
-# defines clisp_lib
+# bring in local libs
 subdir('libclisp')
+subdir('libmpc')
 
 # build the main executable
 app_sources = [
@@ -14,5 +17,5 @@ app_sources = [
 
 executable('clisp',
     sources: app_sources,
-    link_with: clisp_lib,
+    link_with: [clisp_lib, mpc_lib],
     dependencies: deps)
