Make the `just format` command not stomp `libmpc`

--- a/clisp/justfile
+++ b/clisp/justfile
@@ -14,5 +14,5 @@ build-release:
     ln -sf release/clisp ./clisp
 
 format:
-    find ./ \( -iname "*.h" -or -iname "*.c" \) | xargs clang-format -i -style=file
+    clang-format -i -style=file main.c
     find ./libclisp \( -iname "*.h" -or -iname "*.c" \) | xargs clang-format -i -style=file
