Add default build task and make debug launch depend on it

--- a/clisp/.vscode/launch.json
+++ b/clisp/.vscode/launch.json
@@ -10,7 +10,8 @@
             "name": "Debug",
             "program": "${workspaceFolder}/builddir/clisp",
             "args": [],
-            "cwd": "${workspaceFolder}"
+            "cwd": "${workspaceFolder}",
+            "preLaunchTask": "Meson: Build all targets"
         }
     ]
 }
